--- a/r4babs1/week-9/workshop.qmd
+++ b/r4babs1/week-9/workshop.qmd
@@ -8,17 +8,15 @@ toc-location: right
 ```{r}
 #| include: false
 library(tidyverse)
-library(kableExtra)
 ```
 
 # Introduction
 
 ![Data data Artwork from the Openscapes blog Tidy Data for reproducibility, efficiency, and collaboration by Julia Lowndes and Allison Horst](images/ggplot2_masterpiece.png){fig-alt="Stylized text providing an overview of Tidy Data. The top reads 'Tidy data is a standard way of mapping the meaning of a dataset to its structure. - Hadley Wickham.' On the left reads 'In tidy data: each variable forms a column; each observation forms a row; each cell is a single measurement.' There is an example table on the lower right with columns ‘id’, ‘name’ and ‘color’ with observations for different cats, illustrating tidy data structure."}
 
-
 ## Session overview
 
-In this workshop you will learn to summarise and plot datasets with more than one variable. You will also get more practice with working directories, importing data, formatting figures and the pipe. At the end of the workshop you will learn a method for laying out text, figures and figure legends in documents.
+In this workshop you will learn to summarise and plot datasets with more than one variable and how to  write figures to files. You will also get more practice with working directories, importing data, formatting figures and the pipe. 
 
 ## Philosophy
 
@@ -66,7 +64,7 @@ You are going to learn how to summarise and plot data as follows:
 -   one continuous response and one nominal explanatory variable with two groups
 -   one continuous response and one nominal explanatory variable with three groups
 -   one continuous response and one nominal explanatory variable with two groups but the supplied data first need converting to tidy format
-
+-   two continuous  variables
 
 ## Adiponectin secretion
 
@@ -84,18 +82,22 @@ Adiponectin is exclusively secreted from adipose tissue and modulates a number o
 #---CODING ANSWER---
 adipocytes <- read_table("data-raw/adipocytes.txt")
 ```
+
 ![](images/answer.png) What types of variables do you have in the `adipocytes` dataframe? What role would you expect them to play in analysis?
 
 <!-- #---THINKING ANSWER--- -->
+
 <!-- there are two variables: `adiponectin` is the response and is continuous -->
+
 <!-- and `treatment` is explanatory. `treatment` is categorical with two  -->
+
 <!-- levels (groups). -->
 
 ### Summarise
 
 Summarising the data for each treatment group is the next sensible step. The most useful summary statistics for a continuous variable like `adiponectin` are the means, standard deviations, sample sizes and standard errors. You might remember from last week that we use the `group_by()` and `summarise()` functions along with the functions that do the calculations.
 
-![](images/do_in_R.png) Create a data frame called `adip_summary` that contains the means, standard deviations, sample sizes and standard errors for the control and nicotinic acid treated samples. 
+![](images/do_in_R.png) Create a data frame called `adip_summary` that contains the means, standard deviations, sample sizes and standard errors for the control and nicotinic acid treated samples.
 
 ```{r}
 adip_summary <- adipocytes %>%
@@ -106,6 +108,7 @@ adip_summary <- adipocytes %>%
             se = std/sqrt(n))
 
 ```
+
 You should get the following numbers:
 
 ```{r}
@@ -145,17 +148,16 @@ In this figure, we have the data points themselves which are in `adipocytes` dat
 
 Here you will learn that dataframes and aesthetics can be specified *within a `geom_xxxx`* (rather than in the `ggplot()`). This is very useful if the geom only applies to some of the data you want to plot.
 
-::: {.callout-tip}
+::: callout-tip
 ## Tip: `ggplot()`
 
 You put the `data` argument and `aes()` inside `ggplot()` if you want all the `geoms` to use that dataframe and variables. If you want a different dataframe for a `geom`, put the `data` argument and `aes()` inside the `geom_xxxx()`
-
 :::
 
 I will build the plot up in small steps you should edit your *existing* `ggplot()` command as we go.
 
-
 ![](images/do_in_R.png) Plot the data points first.
+
 ```{r}
 ggplot() +
   geom_point(data = adipocytes, 
@@ -175,8 +177,7 @@ ggplot() +
 
 Note that `position = position_jitter(width = 0.1, height = 0)` is inside the `geom_point()` parentheses, after the `aes()` and a comma.
 
-We've set the vertical jitter to 0 because, in contrast to the categorical *x*-axis,  movement on the *y*-axis has meaning (the adiponectin levels). 
-
+We've set the vertical jitter to 0 because, in contrast to the categorical *x*-axis, movement on the *y*-axis has meaning (the adiponectin levels).
 
 ![](images/do_in_R.png) Let's make the points a light grey (edit your existing code):
 
@@ -246,8 +247,6 @@ ggplot() +
 
 You only need to use `scale_y_continuous()` and `scale_x_discrete()` to use labels that are different from those in the dataset. Often this is to use proper terminology and captialisation.
 
-
-
 ![](images/do_in_R.png) Format the figure in a way that is more suitable for including in a report using `theme_classic()` (edit your existing code):
 
 ```{r}
@@ -267,13 +266,13 @@ ggplot() +
   scale_x_discrete(name = "Treatment", 
                    labels = c("Control", "Nicotinic acid")) +
   theme_classic()
-```  
+```
 
 ### Writing figures to file
 
-![](images/do_in_R.png) Make a new folder called `figures`. 
+![](images/do_in_R.png) Make a new folder called `figures`.
 
-![](images/do_in_R.png) Edit you ggplot code so that you assign the figure to a variable. 
+![](images/do_in_R.png) Edit you ggplot code so that you assign the figure to a variable.
 
 ```{r}
 adipfig <- ggplot() +
@@ -308,11 +307,7 @@ ggsave("figures/adipocytes.png",
        dpi = 300)
 ```
 
-`figures/adipocytes.png` is the name of the file including the relative path.
-![](images/do_in_R.png) Look up `ggsave()` in the manual to understand the arguments. You can do this by putting your cursor on the command and pressing F1
-
-
-
+`figures/adipocytes.png` is the name of the file including the relative path. ![](images/do_in_R.png) Look up `ggsave()` in the manual to understand the arguments. You can do this by putting your cursor on the command and pressing F1
 
 ## Myoglobin in seal muscle
 
@@ -320,11 +315,10 @@ The myoglobin concentration of skeletal muscle of three species of seal in grams
 
 The key point here is that the fundmental structure of the seals data is the same as that for the adipocytes data. The only thing that differs is the number of groups (the number of values in the nominal variable). This means the code for summarising and plotting is identical except for the variable names!
 
-::: {.callout-tip}
+::: callout-tip
 ## Tip
 
 When two datasets have the same number of columns and the response variable and the explanaotry variables have the same data types then the code you need is the same.
-
 :::
 
 ### Import
@@ -339,18 +333,22 @@ When two datasets have the same number of columns and the response variable and 
 #---CODING ANSWER---
 seal <- read_csv("data-raw/seal.csv")
 ```
+
 ![](images/answer.png) What types of variables do you have in the `seal` dataframe? What role would you expect them to play in analysis?
 
 <!-- #---THINKING ANSWER--- -->
+
 <!-- there are two variables: `myoglobin` is the response and is continuous -->
+
 <!-- and `species` is explanatory. `species` is categorical with three  -->
+
 <!-- levels (groups). -->
 
 ### Summarise
 
 We need the same code as we use for the adipocyte data - but the dataframe and the variable are different.
 
-![](images/do_in_R.png) Create a data frame called `seal_summary` that contains the means, standard deviations, sample sizes and standard errors for the control and nicotinic acid treated samples. 
+![](images/do_in_R.png) Create a data frame called `seal_summary` that contains the means, standard deviations, sample sizes and standard errors for the control and nicotinic acid treated samples.
 
 ```{r}
 #| include: false
@@ -365,6 +363,7 @@ seal_summary <- seal %>%
             se = std/sqrt(n))
 
 ```
+
 You should get the following numbers:
 
 ```{r}
@@ -376,10 +375,10 @@ knitr::kable(seal_summary) %>% kableExtra::kable_styling()
 
 We again need the same code as we use for the adipocyte data but with the `seal` dataframe and its variables.
 
-
 ![](images/do_in_R.png) Create this figure using your previous code as a template. What else will you need to change?
 
 <!-- #---THINKING ANSWER--- -->
+
 <!-- You will also need to change the axis labels and the axis limits -->
 
 ```{r}
@@ -407,6 +406,7 @@ sealfig <- ggplot() +
 ```
 
 ![](images/do_in_R.png) Save the figure to a file in your figures folder
+
 ```{r}
 
 ggsave("figures/seal-muscle.png",
@@ -422,13 +422,11 @@ ggsave("figures/seal-muscle.png",
 
 The data in [pigeon.txt](data-raw/pigeon.txt) are 40 measurements of interorbital width (in mm) for two populations of domestic pigeons measured to the nearest 0.1mm
 
-
-![Interorbital width is the distance between the eyes](images/interorbital.png){fig-alt="Photo of a domestic pigeon, head on, with an arrow showing the distance between the eyes."}
-### Import
+![Interorbital width is the distance between the eyes](images/interorbital.png){fig-alt="Photo of a domestic pigeon, head on, with an arrow showing the distance between the eyes."} \### Import
 
 ![](images/do_on_your_computer.png) Save [pigeon.txt](data-raw/pigeon.txt) to your `data-raw` folder
 
-![](images/do_in_R.png) Read the data into a dataframe called `pigeons`. 
+![](images/do_in_R.png) Read the data into a dataframe called `pigeons`.
 
 ```{r}
 #| include: false
@@ -436,21 +434,27 @@ The data in [pigeon.txt](data-raw/pigeon.txt) are 40 measurements of interorbita
 #---CODING ANSWER---
 pigeons <- read_table("data-raw/pigeon.txt")
 ```
-![](images/answer.png) What variables are there in the `pigeons` dataframe? 
+
+![](images/answer.png) What variables are there in the `pigeons` dataframe?
 
 <!-- #---THINKING ANSWER--- -->
+
 <!-- This is not obvious - there are two columns called A and B. -->
+
 <!-- Both seem to contain contain continuous values, presumably the interorbital -->
+
 <!-- distances. The A and B seem to be the names of the populations -->
 
 Hummmm, these data are not organised like the other data sets we have used. The population is given as the column names and the interorbital distances for one population are given in a different column than those for the other population. The first row has data from two pigeons which have nothing in common, they just happen to be the first individual recorded in each population.
 
 ```{r}
 #| echo: false
-knitr::kable(pigeons) %>% kableExtra::kable_styling()
+knitr::kable(pigeons) %>%
+  kableExtra::kable_styling() |> 
+  kableExtra::scroll_box(height = "200px")
 ```
 
-This data is not in 'tidy' [Wickham2014-nl]. 
+This data is not in 'tidy' format [@Wickham2014-nl].
 
 Tidy format has variables in column and observations in rows. All of the distance measurements should be in one column and a second column should give the population.
 
@@ -460,7 +464,9 @@ pigeons |>
   pivot_longer(cols = everything(),
                names_to = "population",
                values_to = "distance") |> 
-knitr::kable() %>% kableExtra::kable_styling()
+knitr::kable() %>% 
+  kableExtra::kable_styling() |> 
+  kableExtra::scroll_box(height = "200px")
 ```
 
 Data which is in tidy format is easier to summarise, analyses and plot because the organisation matches the conceptual structure of the data:
@@ -469,14 +475,14 @@ Data which is in tidy format is easier to summarise, analyses and plot because t
 -   it is more obvious that there is no relationship between any of the pigeons except for population
 -   functions are designed to work with variables in columns
 
-
 ### Tidying data
 
 We can put this data in such a format with the `pivot_longer()` function from the `tidyverse`:
 
-`pivot_longer()` collects the values from specified columns (`cols`) into a single column (`values_to`) and creates a column to indicate the group (`names_to`). 
+`pivot_longer()` collects the values from specified columns (`cols`) into a single column (`values_to`) and creates a column to indicate the group (`names_to`).
 
 ![](images/do_in_R.png) Put the data in tidy format:
+
 ```{r}
 pigeons <- pivot_longer(data = pigeons, 
                         cols = everything(), 
@@ -485,31 +491,90 @@ pigeons <- pivot_longer(data = pigeons,
 
 ```
 
-We have overwritten the original dataframe. If you wanted to keep the original you would need to give a new name on the left side of the assignment `<-`
-Note: the data in the file are unchanged.
+We have overwritten the original dataframe. If you wanted to keep the original you would need to give a new name on the left side of the assignment `<-` Note: the data in the file are unchanged.
 
 
-## Organising figures in reports
+## Ulna and height
 
-In this section you will learn a way to lay out figures, legends and text in a document. We will be using a google doc but the methods works just as well in Word. I find the best way to include figures in a document so that things don't move around unexpectedly as you edit is to use a table with the borders turned off. This is what you are aiming for: [R4BABS-1-seal-example](https://docs.google.com/document/d/1ksETkp9TjN4wFj9wPQWleUazrNgHEWrpEQkOi4TPQt8). You are not expect to know what to write in the introduction! I've written a little text to make the document look more like a report.
+The datasets we have used up to this point, have had a continuous variable and a categorical variable where it makes sense to summarise the response for each of the different groups in the categorical variable and plot the response on the *y*-axis. We will now summarise a dataset with two continuous variables. The data in [height.txt](data-raw/height.txt) are the ulna length (cm) and height (m) of 30 people. In this case, it is more appropriate to summarise both of thee variables and to plot them as a scatter plot.
+
+We will use `summarise()` again but we do not need the `group_by()` function this time. We will also need to use each of the summary functions, such as `mean()`, twice, once for each variable.
 
 
-![](images/do_on_your_computer.png) open a Google document
+### Import
 
-![](images/do_on_your_computer.png) add some text (it can be any text at all)
+![](images/do_on_your_computer.png) Save [height.txt](data-raw/height.txt) to your `data-raw` folder
 
-![](images/do_on_your_computer.png) insert a 2 row x 1 column table
+![](images/do_in_R.png) Read the data into a dataframe called `ulna_heights`. 
 
-![](images/do_on_your_computer.png) Put your cursor in the bottom cell of the table and a figure legend.
+```{r}
+#| include: false
 
-![](images/do_on_your_computer.png) Put your cursor in the top cell of the table and choose Insert | Image | Upload from computer and navigate to one of your images. 
+#---CODING ANSWER---
+ulna_heights <- read_table("data-raw/height.txt")
+```
 
-![](images/do_on_your_computer.png) Hold down the control key and click on each of the borders until all are selected. Then use the Border Width icon to set the width to 0pt
+### Summarise
+
+![](images/do_in_R.png) Create a data frame called `ulna_heights_summary` that contains the sample size and means, standard deviations and standard errors for both variables.
+
+```{r}
+ulna_heights_summary <- ulna_heights %>%
+  summarise(n = length(ulna),
+            mean_ulna = mean(ulna),
+            std_ulna = sd(ulna),
+            se_ulna = std_ulna/sqrt(n),
+            mean_height = mean(height),
+            std_height = sd(height),
+            se_height = std_height/sqrt(n))
+
+```
+
+You should get the following numbers:
+
+```{r}
+#| echo: false
+knitr::kable(ulna_heights_summary) %>% kableExtra::kable_styling()
+```
+
+### Visualise
+
+To plot make a scatter plot we need to use `geom_point()` again but without any scatter. In this case, it does not really matter which variable is on the *x*-axis and which is on the *y*-axis.
+
+![](images/do_in_R.png) Make a simple scatter plot
+```{r}
+ggplot(data = ulna_heights, aes(x = ulna, y = height)) +
+  geom_point()
+```
+
+If you have time, you may want to format the figure more appropriately.
+
+```{r}
+#| echo: false
+
+#---CODING ANSWER---
+ulnafig <- ggplot(data = ulna_heights, aes(x = ulna, y = height)) +
+  geom_point() +
+  scale_x_continuous(name = "Ulna length (cm)",
+                     limits = c(0, 40), 
+                     expand = c(0, 0)) +
+  scale_y_continuous(name = "Height (m)",
+                     limits = c(0, 2.1), 
+                     expand = c(0, 0)) +
+  theme_classic()
+ggsave("figures/ulna_heights.png",
+       plot = ulnafig,
+       device = "png",
+       width = 3,
+       height = 3,
+       units = "in",
+       dpi = 300)
+```
+
 
 <!-- ## Look after future you! -->
 
 <!-- Future you is going to summarise and plot data from the "River practicals". You can make this much easier by documenting what you have done now. At the moment all of your code from this workshop is in a single file, probably called `analysis.R`. I recommend making a new script for each of data set and copying the code which imports, summarises and plots it. This will make it easier for future you to find the code you need. Here is an example: [seals-analysis.R](assets/seals-analysis.R). You may wish to comment your version much more. -->
-
 You're finished!
 
 # 🥳 Well Done! 🎉
@@ -524,8 +589,8 @@ You're finished!
 
 These contain all the code needed in the workshop even where it is not visible on the webpage.
 
-The [workshop.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs1/week-9/workshop.qmd). Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---THINKING ANSWER---`
+The [workshop.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interleaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Qmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs1/week-9/workshop.qmd). Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---THINKING ANSWER---`
 
-Pages made with Quarto [@allaire2022]
+Pages made with Quarto @allaire2022 using the following packages: knitr @knitr, tidyverse @tidyverse-2, kableExtra @kableExtra.
 
 # References
