--- a/references.bib
+++ b/references.bib
@@ -58,3 +58,28 @@
   year     =  2014,
   url      = "https://vita.had.co.nz/papers/tidy-data.pdf",
 }
+@article{knitr,
+	title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+	author = {Xie, Yihui},
+	year = {2022},
+	date = {2022},
+	url = {https://yihui.org/knitr/}
+}
+
+@article{tidyverse-2,
+	title = {Welcome to the {\textbraceleft}tidyverse{\textbraceright}},
+	author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, {Lucy D'Agostino} and {François}, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and {Müller}, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+	year = {2019},
+	date = {2019},
+	pages = {1686},
+	volume = {4},
+	doi = {10.21105/joss.01686}
+}
+
+@article{kableExtra,
+	title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+	author = {Zhu, Hao},
+	year = {2021},
+	date = {2021},
+	url = {https://CRAN.R-project.org/package=kableExtra}
+}
