--- a/r4babs1/week-6/study_after_workshop.qmd
+++ b/r4babs1/week-6/study_after_workshop.qmd
@@ -4,4 +4,4 @@ subtitle: "Independent Study to consolidate this week"
 ---
 
 
-add learnr quiz about file systems
+There is no additional study this week but you may want to look ahead to next week.
